--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <script src="node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="node_modules/jquery/dist/jquery.min.js" type="text/javascript"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
 
         <link rel="stylesheet" href="styles/site.css">
-        <script src="scripts/site.js"></script>
+        <script src="scripts/site.js" type="text/javascript"></script>
     </head>
     <body>
         <div class="container">
